force-app/main/default/objects/Field_Action_Item__c/Field_Action_Item__c.object-meta.xml
<CustomObject>
    <description>Junction object to relate Cases/Work orders with Field Actions &amp; Notifications.</description>
    <label>Field Action Item</label>
    <nameField>
        <displayFormat>FAI-{00000}</displayFormat>
        <label>Field Action Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Action Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>