force-app/main/default/objects/Field_Action_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the case for field actions &amp; notification</description>
    <inlineHelpText>If this field is blank, it will be populated when this record is saved (if applicable)</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Field_Action_Item</relationshipName>
    <type>Lookup</type>
</CustomField>