force-app/main/default/objects/Field_Action_Item__c/fields/Field_Action_Notification__c.field-meta.xml
<CustomField>
    <fullName>Field_Action_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Field Action &amp; Notification</description>
    <label>Field Action &amp; Notification</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 4) AND (3 OR 2)) OR (1 AND ( NOT (2) OR NOT (3)))</booleanFilter>
        <errorMessage>This is a locked FAN for formal monitoring that cannot be associated to this case/work order. For further information contact Product Support.</errorMessage>
        <filterItems>
            <field>Field_Action_Notification__c.Status__c</field>
            <operation>notContain</operation>
            <value>Locked</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Commercial and Revenue Operations</value>
        </filterItems>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>GIS</value>
        </filterItems>
        <filterItems>
            <field>Field_Action_Notification__c.Status__c</field>
            <operation>contains</operation>
            <value>Locked</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Field_Action_Notification__c</referenceTo>
    <relationshipLabel>Field Action Items</relationshipLabel>
    <relationshipName>Field_Action_Item</relationshipName>
    <type>Lookup</type>
</CustomField>