force-app/main/default/objects/Field_Action_Item__c/fields/Field_Action_Notification_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Action_Notification_Record_Type__c</fullName>
    <description>To capture the record type of the field actions &amp; notification</description>
    <formula>Field_Action_Notification__r.RecordType.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>