force-app/main/default/objects/Field_Action_Item__c/fields/Field_Action_Notification_Subject__c.field-meta.xml
<CustomField>
    <fullName>Field_Action_Notification_Subject__c</fullName>
    <description>To capture the subject of field actions &amp; notification.</description>
    <formula>Field_Action_Notification__r.Subject__c</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>