force-app/main/default/objects/Field_Action_Item__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the installed product on case and work order</description>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipName>Field_Action_Item</relationshipName>
    <type>Lookup</type>
</CustomField>