force-app/main/default/objects/Field_Action_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the product related to case or work order.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Field_Action_Item</relationshipName>
    <type>Lookup</type>
</CustomField>