force-app/main/default/objects/Field_Action_Item__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the work order for field action &amp; notification</description>
    <inlineHelpText>If this field is blank, it will be populated when this record is saved (if applicable)</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipName>Field_Action_Item</relationshipName>
    <type>Lookup</type>
</CustomField>